// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<IconInput /> > displays provided icon 1`] = `
<div>
  <div
    class="tw:relative"
  >
    <input
      class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input tw:pr-11"
    />
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-calendar fa-fw tw:absolute tw:right-3 tw:top-1/2 tw:-translate-y-1/2 tw:cursor-pointer"
      data-icon="calendar"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M96 32l0 32L48 64C21.5 64 0 85.5 0 112l0 48 448 0 0-48c0-26.5-21.5-48-48-48l-48 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32L160 64l0-32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192L0 192 0 464c0 26.5 21.5 48 48 48l352 0c26.5 0 48-21.5 48-48l0-272z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconInput /> > displays provided icon 2`] = `
<div>
  <div
    class="tw:relative"
  >
    <input
      class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input tw:pr-11"
    />
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-apple-whole fa-fw tw:absolute tw:right-3 tw:top-1/2 tw:-translate-y-1/2 tw:cursor-pointer"
      data-icon="apple-whole"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 112c-8.8 0-16-7.2-16-16l0-16c0-44.2 35.8-80 80-80l16 0c8.8 0 16 7.2 16 16l0 16c0 44.2-35.8 80-80 80l-16 0zM0 288c0-76.3 35.7-160 112-160c27.3 0 59.7 10.3 82.7 19.3c18.8 7.3 39.9 7.3 58.7 0c22.9-8.9 55.4-19.3 82.7-19.3c76.3 0 112 83.7 112 160c0 128-80 224-160 224c-16.5 0-38.1-6.6-51.5-11.3c-8.1-2.8-16.9-2.8-25 0c-13.4 4.7-35 11.3-51.5 11.3C80 512 0 416 0 288z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`<IconInput /> > displays provided icon 3`] = `
<div>
  <div
    class="tw:relative"
  >
    <input
      class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input tw:pr-11"
    />
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-table fa-fw tw:absolute tw:right-3 tw:top-1/2 tw:-translate-y-1/2 tw:cursor-pointer"
      data-icon="table"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M64 256l0-96 160 0 0 96L64 256zm0 64l160 0 0 96L64 416l0-96zm224 96l0-96 160 0 0 96-160 0zM448 256l-160 0 0-96 160 0 0 96zM64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
